<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp"
        tools:context=".MainActivity">

        <!-- Top Guideline -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <!-- Selected Time TextView -->
        <TextView
            android:id="@+id/selectedTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_rectangle"
            android:text="@string/setTime"
            android:textAlignment="center"
            android:textColor="@color/accentColor"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ReminderTitle" />


        <EditText
            android:id="@+id/ReminderTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:hint="@string/enter_reminder"
            android:inputType="text"
            android:textColor="@color/accentColor"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectedTime" />

        <Button
            android:id="@+id/selectTimeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/accentColor"
            android:text="@string/select_time"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ReminderTitle" />

        <Button
            android:id="@+id/setAlarmBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/accentColor"
            android:text="@string/set_reminder"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectTimeBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
