<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StopwatchActivity">

    <!-- Horizontal Guideline to position buttons better -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.6"
        android:orientation="horizontal" />

    <!-- Chronometer in the center -->
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/accentColor"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal" />

    <!-- Start Button -->
    <Button
        android:id="@+id/btn_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accentColor"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_stop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer"
        app:layout_constraintWidth_percent="0.45" />

    <!-- Stop Button -->
    <Button
        android:id="@+id/btn_stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accentColor"
        android:text="@string/pause"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_start"
        app:layout_constraintTop_toBottomOf="@+id/chronometer"
        app:layout_constraintWidth_percent="0.45" />

    <!-- Reset Button positioned using the guideline -->
    <Button
        android:id="@+id/btn_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accentColor"
        android:text="@string/reset"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
        app:layout_constraintWidth_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>
